Implemented Iterable in LinkedList, and removed all uses of ArrayList in datastructures